remove recommendation to install haveged, include random.trust_cpu=on CPU flag in ISO kernel boot parameters

--- a/sensor-iso/config/includes.binary/boot/grub/grub.cfg
+++ b/sensor-iso/config/includes.binary/boot/grub/grub.cfg
@@ -22,12 +22,12 @@ insmod play
 play 960 440 1 0 4 440 1
 
 menuentry "Live system" {
-  linux /live/vmlinuz boot=live components username=sensor nosplash elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
+  linux /live/vmlinuz boot=live components username=sensor nosplash random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
   initrd  /live/initrd.img
 }
 
 menuentry "Live system (fully in RAM)" {
-  linux /live/vmlinuz boot=live toram components username=sensor nosplash elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
+  linux /live/vmlinuz boot=live toram components username=sensor nosplash random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
   initrd  /live/initrd.img
 }
 
