--- a/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
+++ b/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
@@ -20,7 +20,7 @@ insmod play
 play 960 440 1 0 4 440 1
 
 menuentry "Live system" {
-  linux /live/vmlinuz boot=live components username=analyst nosplash persistence persistence-encryption=none,luks elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
+  linux /live/vmlinuz boot=live components username=analyst nosplash persistence persistence-encryption=none,luks random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
   initrd  /live/initrd.img
 }
 
