--- a/malcolm-iso/vagrant/Vagrantfile
+++ b/malcolm-iso/vagrant/Vagrantfile
@@ -38,7 +38,7 @@ Vagrant.configure("2") do |config|
     echo "deb-src http://httpredir.debian.org/debian/ buster-backports main contrib non-free" >> /etc/apt/sources.list
     apt-get update
     export KERNEL_VERSION=$(apt-cache search linux-image-4 | grep -Pv -- '(-(rt|cloud)-amd64|amd64-(dbg|unsigned))' | sort -r --sort=version | awk '{print $1}' | head -n 1 | sed 's/^linux-image-//' | sed 's/-amd64$//')
-    apt-get install -y \
+    apt-get -t buster-backports install -y \
       linux-image-$KERNEL_VERSION-amd64 linux-headers-$KERNEL_VERSION-amd64 linux-headers-$KERNEL_VERSION-common \
       dkms build-essential linux-kbuild-4.19 linux-compiler-gcc-8-x86 \
       firmware-linux firmware-linux-nonfree firmware-misc-nonfree firmware-amd-graphics
@@ -48,7 +48,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-STEP2
     export DEBIAN_FRONTEND=noninteractive
     apt-get update
-    apt-get install -y \
+    apt-get -t buster-backports install -y \
       rsync git live-build debootstrap xorriso squashfs-tools genisoimage pandoc imagemagick \
       apt-transport-https ca-certificates curl gnupg2 software-properties-common
     curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
