--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -127,7 +127,7 @@ http {
       proxy_set_header Host moloch.malcolm.local;
     }
 
-    # Kibana shortcut
+    # Moloch -> Kibana shortcut
     location ~* ^/idmol2kib(.*) {
 
       set $filter_start_time now-1d;
@@ -154,6 +154,16 @@ http {
       proxy_pass http://docker-kibana;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
+    }
+
+    # Kibana -> Moloch shortcut
+    location ~* /idkib2mol/(.*) {
+      rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
+      proxy_pass http://docker-moloch;
+      proxy_redirect off;
+      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header Authorization "";
     }
 
     # already prepended /kibana to match the server.basePath in kibana's YML config file
@@ -249,6 +259,16 @@ http {
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
+    }
+
+    # Kibana -> Moloch shortcut
+    location ~* /idkib2mol/(.*) {
+      rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
+      proxy_pass http://docker-moloch;
+      proxy_redirect off;
+      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header Authorization "";
     }
 
     # already prepended /kibana to match the server.basePath in kibana's YML config file
