have Kibana set up drilldown url mappings on each startup

--- a/kibana/supervisord.conf
+++ b/kibana/supervisord.conf
@@ -29,6 +29,20 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
+[program:idxinit]
+command=bash -c "sleep 180 && /data/elastic_search_status.sh -w && /data/kibana_index_refresh.py -v"
+user=kibana
+autostart=true
+autorestart=false
+startsecs=0
+startretries=0
+stopasgroup=true
+killasgroup=true
+directory=/data
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
 [program:maps]
 command=/usr/bin/http-server /opt/maps --cors='*' -d false -i false --no-dotfiles -p %(ENV_KIBANA_OFFLINE_REGION_MAPS_PORT)s
 user=kibana
