added more actions (smtp, ssh, socks, ssl, rfb, etc.)

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -80,6 +80,24 @@ filter {
   if ([zeek_dnp3][fc_request])                  { mutate { id => "mutate_merge_normalize_zeek_dnp3_fc_request"
                                                            merge => { "[zeek][action]" => "[zeek_dnp3][fc_request]" } } }
 
+  if ([zeek_dns]) {
+    # action: query class and type
+    if ([zeek_dns][qclass_name]) and ([zeek_dns][qtype_name]) {
+      mutate { id => "mutate_add_field_metadata_dns_class_and_type"
+               add_field => { "[@metadata][dns_action]" => "%{[zeek_dns][qclass_name]} %{[zeek_dns][qtype_name]}" } }
+    } else if ([zeek_dns][qclass_name]) {
+      mutate { id => "mutate_add_field_metadata_dns_class"
+               add_field => { "[@metadata][dns_action]" => "%{[zeek_dns][qclass_name]}" } }
+    } else if ([zeek_dns][qtype_name]) {
+      mutate { id => "mutate_add_field_metadata_dns_type"
+               add_field => { "[@metadata][dns_action]" => "%{[zeek_dns][qtype_name]}" } }
+    }
+    if ([@metadata][dns_action]) {
+      mutate { id => "mutate_merge_zeek_dns_action"
+               merge => { "[zeek][action]" => "[@metadata][dns_action]" } }
+    }
+  }
+
   if ([zeek_enip][command])                     { mutate { id => "mutate_merge_normalize_zeek_enip_command"
                                                            merge => { "[zeek][action]" => "[zeek_enip][command]" } } }
 
@@ -104,6 +122,14 @@ filter {
   if ([zeek_modbus][func])                      { mutate { id => "mutate_merge_normalize_zeek_modbus_func"
                                                            merge => { "[zeek][action]" => "[zeek_modbus][func]" } } }
 
+  if ([zeek_mqtt_connect][connect_status]) {
+    # this log entry implicitly means "connect"
+    mutate { id => "mutate_add_field_zeek_mqtt_connect_action"
+             add_field => { "[@metadata][zeek_mqtt_connect_action]" => "Connect" } }
+    mutate { id => "mutate_merge_zeek_mqtt_connect_action"
+             merge => { "[zeek][action]" => "[@metadata][zeek_mqtt_connect_action]" } }
+  }
+
   if ([zeek_mqtt_publish][payload_dict][messageType]) {
     # not sure if this is a standard or just the PCAPs I found :/
     mutate { id => "mutate_merge_normalize_zeek_mqtt_publish_payload_dict_messageType"
@@ -125,6 +151,15 @@ filter {
   if ([zeek_profinet_dce_rpc][operation])       { mutate { id => "mutate_merge_normalize_zeek_profinet_dce_rpc_operation"
                                                            merge => { "[zeek][action]" => "[zeek_profinet_dce_rpc][operation]" } } }
 
+
+  if ([zeek_rfb][auth]) and ([zeek_rfb][authentication_method]) {
+    # if authentication was attempted, assign an "authenticate" action
+    mutate { id => "mutate_add_field_zeek_rfb_auth_action"
+             add_field => { "[@metadata][zeek_rfb_auth_action]" => "Authenticate" } }
+    mutate { id => "mutate_merge_zeek_rfb_auth_action"
+             merge => { "[zeek][action]" => "[@metadata][zeek_rfb_auth_action]" } }
+  }
+
   if ([zeek_s7comm]) {
     ruby {
       # action = rosctr:mode:type:sub
@@ -136,6 +171,44 @@ filter {
                         event.get('[zeek_s7comm][parameters][type]'),
                         event.get('[zeek_s7comm][parameters][sub]')].compact.join(':'))
         event.set('[zeek][action]', actions)"
+    }
+  }
+
+  if ([zeek_smtp]) {
+    # action depends on varios smtp headers' presence
+    if ([zeek_smtp][last_reply]) {
+      if ([zeek_smtp][msg_id]) {
+        mutate { id => "mutate_add_field_zeek_smtp_action_deliver"
+                 add_field => { "[@metadata][zeek_smtp_action]" => "Deliver message" } }
+      } else if ([zeek_smtp][mailfrom]) {
+        mutate { id => "mutate_add_field_zeek_smtp_action_queue"
+                 add_field => { "[@metadata][zeek_smtp_action]" => "Queue message" } }
+      } else {
+        mutate { id => "mutate_add_field_zeek_smtp_action_connect_reply"
+                 add_field => { "[@metadata][zeek_smtp_action]" => "Connect" } }
+      }
+    } else {
+      mutate { id => "mutate_add_field_zeek_smtp_action_connect_no_reply"
+               add_field => { "[@metadata][zeek_smtp_action]" => "Connect" } }
+    }
+    if ([@metadata][zeek_smtp_action]) {
+      mutate { id => "mutate_merge_zeek_smtp_action"
+               merge => { "[zeek][action]" => "[@metadata][zeek_smtp_action]" } }
+    }
+  }
+
+  if ([zeek_socks]) {
+    # socks action is "Authenticate" or "Connect" based on user/password or not
+    if ([zeek_socks][user]) or ([zeek_socks][password]) {
+      mutate { id => "mutate_add_field_zeek_socks_action_authenticate"
+               add_field => { "[@metadata][zeek_socks_action]" => "Authenticate" } }
+    } else {
+      mutate { id => "mutate_add_field_zeek_socks_action_connect"
+               add_field => { "[@metadata][zeek_socks_action]" => "Connect" } }
+    }
+    if ([@metadata][zeek_socks_action]) {
+      mutate { id => "mutate_merge_zeek_socks_action"
+               merge => { "[zeek][action]" => "[@metadata][zeek_socks_action]" } }
     }
   }
 
@@ -159,6 +232,7 @@ filter {
                                              merge => { "[zeek][action]" => "[zeek_sip][method]" } } }
 
   if ([zeek_snmp]) {
+    # action based on > 0 values for variou get/set PDUs
     if ([zeek_snmp][get_bulk_requests]) and ([zeek_snmp][get_bulk_requests] != "0") {
       mutate { id => "mutate_add_field_zeek_snmp_get_bulk_requests_action"
                add_field => { "[@metadata][snmp_get_bulk_requests_action]" => "GetBulkRequest" } }
@@ -185,11 +259,41 @@ filter {
     }
   }
 
+  if ([zeek_ssh]) {
+    # ssh action is "Authenticate" or "Connect" based on auth_attempts
+    if ([zeek_ssh][auth_attempts]) {
+      mutate { id => "mutate_add_field_zeek_ssh_action_authenticate"
+               add_field => { "[@metadata][zeek_ssh_action]" => "Authenticate" } }
+    } else {
+      mutate { id => "mutate_add_field_zeek_ssh_action_connect"
+               add_field => { "[@metadata][zeek_ssh_action]" => "Connect" } }
+    }
+    if ([@metadata][zeek_ssh_action]) {
+      mutate { id => "mutate_merge_zeek_ssh_action"
+               merge => { "[zeek][action]" => "[@metadata][zeek_ssh_action]" } }
+    }
+  }
+
+  if ([zeek_ssl]) {
+    # SSL action will be either "connect", "validate", "resume"
+    if ([zeek_ssl][resumed] == "T") {
+      mutate { id => "mutate_add_field_zeek_ssl_resume"
+               add_field => { "[@metadata][zeek_ssl_action]" => "Resume" } }
+    } else if ([zeek_ssl][established] != "T") and ([zeek_ssl][validation_status]) and ([zeek_ssl][validation_status] != "ok") {
+      mutate { id => "mutate_add_field_zeek_ssl_validate"
+               add_field => { "[@metadata][zeek_ssl_action]" => "Validate Certificate" } }
+    } else {
+      mutate { id => "mutate_add_field_zeek_ssl_connect"
+               add_field => { "[@metadata][zeek_ssl_action]" => "Connect" } }
+    }
+    mutate { id => "mutate_merge_zeek_ssl_action"
+             merge => { "[zeek][action]" => "[@metadata][zeek_ssl_action]" } }
+  }
+
   if ([zeek_tds][command]) { mutate { id => "mutate_merge_normalize_zeek_tds_command"
                              merge => { "[zeek][action]" => "[zeek_tds][command]" } } }
 
   if ([zeek_tds_rpc][procedure_name]) {
-
     mutate { id => "mutate_add_field_zeek_tds_rpc_procedure_name_tmp"
              add_field => { "[@metadata][zeek_tds_rpc_procedure_name_tmp]" => "%{[zeek_tds_rpc][procedure_name]}" } }
 
@@ -210,6 +314,10 @@ filter {
       code => "event.set('[zeek][action]', event.get('[zeek][action]').uniq)"
     }
   }
+
+  # Result ############################################################################################################
+  # collect all result/status/response/errors under the parent [zeek][result] array
+
 
   # FUIDs #############################################################################################################
   # collect all other FUIDs under parent [zeek][fuid] array (some were already done at the root level in
