--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3090,21 +3090,7 @@ filter {
   } else if ([source] == "ldap") {
     #############################################################################################################################
     # ldap.log specific logic
-
     # todo: ldap.authtype, ldap.authtypeCnt, ldap.bindname, ldap.bindnameCnt
-
-    if ([zeek_ldap][result_code]) {
-      translate {
-        id => "translate_zeek_ldap_result"
-        field => "[zeek_ldap][result_code]"
-        destination => "[zeek_ldap][result]"
-        dictionary_path => "/etc/ldap_result_codes.yaml"
-      }
-      if (![zeek_ldap][result]) {
-        mutate { id => "mutate_add_field_zeek_ldap_result_fallback"
-                 add_field => { "[zeek_ldap][result]" => "%{[zeek_ldap][result_code]}" } }
-      }
-    }
 
   } else if ([source] == "mqtt_publish") {
     #############################################################################################################################
@@ -3125,6 +3111,15 @@ filter {
     mutate { id => "mutate_split_zeek_mqtt_subscribe_fields"
              split => { "[zeek_mqtt_subscribe][topics]" => ","
                         "[zeek_mqtt_subscribe][qos_levels]" => "," } }
+
+  } else if ([source] == "mysql") {
+    #############################################################################################################################
+    # mysql.log specific logic
+
+    if ([zeek_mysql][rows] == 0) {
+      mutate { id => "mutate_remove_field_zeek_mysql_zero_rows"
+               remove_field => [ "[zeek_mysql][rows]" ] }
+    }
 
   } else if ([source] == "notice") {
     #############################################################################################################################
@@ -3534,58 +3529,10 @@ filter {
     }
 
     if ([zeek_smtp][last_reply]) {
+      # will be mapped to a "result" later in normalization
       grok {
         id => "grok_zeek_zeek_smtp_last_reply"
         match => { "[zeek_smtp][last_reply]" => [ "^%{SPACE}%{NUMBER:[zeek_smtp][last_reply_code]}" ] }
-      }
-      if ([zeek_smtp][last_reply_code]) {
-        translate {
-          id => "translate_zeek_smtp_last_reply_code"
-          field => "[zeek_smtp][last_reply_code]"
-          destination => "[zeek_smtp][last_reply_msg]"
-          dictionary => {
-            "101" => "The server is unable to connect"
-            "111" => "Connection refused or inability to open an SMTP stream"
-            "200" => "System status message or help reply"
-            "214" => "A response to the HELP command"
-            "220" => "The server is ready"
-            "221" => "The server is closing its transmission channel"
-            "250" => "Success"
-            "251" => "User not local will forward"
-            "252" => "Cannot verify the user, but it will try to deliver the message anyway"
-            "354" => "Start mail input"
-            "420" => "Timeout connection problem"
-            "421" => "Service is unavailable due to a connection problem"
-            "422" => "The recipient's mailbox has exceeded its storage limit"
-            "431" => "Not enough space on the disk"
-            "432" => "Recipient's incoming mail queue has been stopped"
-            "441" => "The recipient's server is not responding"
-            "442" => "The connection was dropped during the transmission"
-            "446" => "The maximum hop count was exceeded for the message"
-            "447" => "Message timed out because of issues concerning the incoming server"
-            "449" => "Routing error"
-            "450" => "User's mailbox is unavailable"
-            "451" => "Aborted – Local error in processing"
-            "452" => "Too many emails sent or too many recipients"
-            "471" => "An error of your mail server"
-            "500" => "Syntax error"
-            "501" => "Syntax error in parameters or arguments"
-            "503" => "Bad sequence of commands, or requires authentication"
-            "504" => "Command parameter is not implemented"
-            "510" => "Bad email address"
-            "511" => "Bad email address"
-            "512" => "Host server for the recipient's domain name cannot be found in DNS"
-            "513" => "Address type is incorrect"
-            "523" => "associated with encryption in RFC 5248"
-            "530" => "Authentication problem"
-            "541" => "The recipient address rejected your message"
-            "550" => "Non-existent email address"
-            "551" => "User not local or invalid address – relay denied"
-            "552" => "Exceeded storage allocation"
-            "553" => "Mailbox name invalid"
-            "554" => "Transaction has failed"
-          }
-        }
       }
     }
 
