various fixes for results

--- a/logstash/maps/ftp_result_codes.yaml
+++ b/logstash/maps/ftp_result_codes.yaml
@@ -1,7 +1,8 @@
 "110": "Restart marker replay"
 "120": "Service ready in n minutes"
 "125": "Data connection already open; transfer starting"
-"150": "File status okay; about to open data connection"
+"150": "Opening data connection"
+"200": "Success"
 "202": "Command not implemented"
 "211": "System status or help reply"
 "212": "Directory status"
