--- a/logstash/maps/http_result_codes.yaml
+++ b/logstash/maps/http_result_codes.yaml
@@ -2,6 +2,11 @@
 "101": "Switching Protocols"
 "102": "Processing"
 "103": "Early Hints"
+"110": "Response is Stale"
+"111": "Revalidation Failed"
+"112": "Disconnected Operation"
+"113": "Heuristic Expiration"
+"199": "Miscellaneous Warning"
 "200": "Success"
 "201": "Created"
 "202": "Accepted"
@@ -11,11 +16,13 @@
 "206": "Partial Content"
 "207": "Multi-status"
 "208": "Already Reported"
+"214": "Transformation Applied"
 "218": "This Is Fine"
 "226": "IM Used"
+"299": "Miscellaneous Persistent Warning"
 "300": "Multiple Choices"
 "301": "Moved Permanently"
-"302": "Found"
+"302": "Redirect"
 "303": "See Other"
 "304": "Not Modified"
 "305": "Use Proxy"
@@ -23,7 +30,7 @@
 "307": "Temporary Redirect"
 "308": "Permanent Redirect"
 "400": "Bad Request"
-"401": "Unauthorized"
+"401": "Not Authorized"
 "402": "Payment Required"
 "403": "Forbidden"
 "404": "Error On Wikipedia"
@@ -67,7 +74,7 @@
 "498": "Invalid Token"
 "499": "Client Closed Request"
 "500": "Internal Server Error"
-"501": "Not Implemented"
+"501": "Unsupported Method"
 "502": "Bad Gateway"
 "503": "Service Unavailable"
 "504": "Gateway Timeout"
