--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -226,6 +226,11 @@ filter {
   if ([dns][host]) {
     # if requested, look up DNS queries using freq_server.py to get entropy scores
     # I would do this in an http filter (like zeek_ssl.server_name)
+
+    # TODO: getting occasional error ruby_exception, e.g...
+    # ruby_dns_freq_lookup: bad URI(is not URI?): http://freq:10004/measure/samsung c1810 series (sec30cda7c66937)._printer._tcp.local
+    # maybe need to URLencode?
+
     ruby {
         id => "ruby_dns_freq_lookup"
         init => "
