--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2665,22 +2665,8 @@ filter {
 
     translate {
       field => "[zeek_conn][conn_state]"
-
       destination => "[zeek_conn][conn_state_description]"
-
-      dictionary => [ "S0", "Connection attempt seen, no reply",
-                      "S1", "Connection established, not terminated",
-                      "S2", "Connection established and close attempt by originator seen (but no reply from responder)",
-                      "S3", "Connection established and close attempt by responder seen (but no reply from originator)",
-                      "SF", "Normal SYN/FIN completion",
-                      "REJ", "Connection attempt rejected",
-                      "RSTO", "Connection established, originator aborted (sent a RST)",
-                      "RSTR", "Established, responder aborted",
-                      "RSTOS0", "Originator sent a SYN followed by a RST, we never saw a SYN-ACK from the responder",
-                      "RSTRH", "Responder sent a SYN ACK followed by a RST, we never saw a SYN from the (purported) originator",
-                      "SH", "Originator sent a SYN followed by a FIN, we never saw a SYN ACK from the responder (hence the connection was 'half' open)",
-                      "SHR", "Responder sent a SYN ACK followed by a FIN, we never saw a SYN from the originator",
-                      "OTH", "No SYN seen, just midstream traffic (a 'partial connection' that was not later closed)"]
+      dictionary_path => "/etc/conn_states.yaml"
     }
 
     mutate { id => "mutate_split_zeek_conn_tunnel_parents"
@@ -2764,6 +2750,10 @@ filter {
     if ([zeek_dhcp][msg_types]) {
       mutate { id => "mutate_split_zeek_dhcp_msg_types"
                  split => { "[zeek_dhcp][msg_types]" => "," } }
+      ruby {
+        id => "ruby_zeek_dhcp_msg_types"
+        code => "event.set('[zeek_dhcp][msg_types]', event.get('[zeek_dhcp][msg_types]').uniq)"
+      }
       mutate { id => "mutate_split_zeek_dhcp_type"
                merge => { "[dhcp][type]" => "[zeek_dhcp][msg_types]" } }
     }
@@ -2790,6 +2780,26 @@ filter {
         id => "ruby_zeek_dhcp_hostCnt"
         code => "event.set('[dhcp][hostCnt]', event.get('[dhcp][host]').length)"
       }
+    }
+
+  } else if ([source] == "dnp3") {
+    #############################################################################################################################
+    # dnp3.log specific logic
+
+    # translate IIN bitmap (least significant bit = zeek_dnp3_iin_flags[0], etc.)
+    # reference: https://raw.githubusercontent.com/wireshark/wireshark/master/epan/dissectors/packet-dnp.c (search IIN)
+    ruby {
+      id => "ruby_parse_dnp3_iin"
+      init => "$zeek_dnp3_iin_flags = [ 'Function Code not Implemented', 'Requested Objects Unknown', 'Parameters Invalid or Out of Range', 'Event Buffer Overflow', 'Operation Already Executing', 'Configuration Corrupt', 'Reserved', 'Reserved', 'Broadcast Msg Rx', 'Class 1 Data Available', 'Class 2 Data Available', 'Class 3 Data Available', 'Time Sync Required', 'Digital Outputs in Local', 'Device Trouble', 'Device Restart' ]"
+      code => "
+        iinNum = event.get('[zeek_dnp3][iin]').to_i
+        if (iinNum > 0) then
+          iinFlags = Array.new
+          $zeek_dnp3_iin_flags.each_with_index do |val, idx|
+            iinFlags.push(val) if (iinNum[idx] == 1)
+          end
+          event.set('[zeek_dnp3][iin_flags]', iinFlags)
+        end"
     }
 
   } else if ([source] == "dns") {
@@ -3187,12 +3197,7 @@ filter {
         id => "translate_zeek_ntp_mode_str"
         field => "[zeek_ntp][mode]"
         destination => "[zeek_ntp][mode_str]"
-        dictionary => {
-          "1" => "client"
-          "2" => "server"
-          "3" => "peer"
-          "4" => "broadcast/multicast"
-        }
+        dictionary_path => "/etc/ntp_modes.yaml"
       }
     }
 
