--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -154,10 +154,17 @@ filter {
              merge => { "[zeek][action]" => "[@metadata][zeek_mqtt_connect_action]" } }
   }
 
-  if ([zeek_mqtt_publish][payload_dict][messageType]) {
-    # not sure if this is a standard or just the PCAPs I found :/
-    mutate { id => "mutate_merge_normalize_zeek_mqtt_publish_payload_dict_messageType"
-    merge => { "[zeek][action]" => "[zeek_mqtt_publish][payload_dict][messageType]" } }
+  if ([zeek_mqtt_publish]) {
+    if ([zeek_mqtt_publish][payload_dict][messageType]) {
+      # not sure if this is a standard or just the PCAPs I found :/
+      mutate { id => "mutate_merge_normalize_zeek_mqtt_publish_payload_dict_messageType"
+      merge => { "[zeek][action]" => "[zeek_mqtt_publish][payload_dict][messageType]" } }
+    } else {
+      mutate { id => "mutate_add_field_zeek_mqtt_publish_action"
+               add_field => { "[@metadata][zeek_mqtt_publish_action]" => "Publish" } }
+      mutate { id => "mutate_merge_zeek_mqtt_publish_action"
+               merge => { "[zeek][action]" => "[@metadata][zeek_mqtt_publish_action]" } }
+    }
   }
 
   if ([zeek_mqtt_subscribe][action])            { mutate { id => "mutate_merge_normalize_zeek_mqtt_subscribe_action"
@@ -165,6 +172,14 @@ filter {
 
   if ([zeek_mysql][cmd])                        { mutate { id => "mutate_merge_normalize_zeek_mysql_cmd"
                                                            merge => { "[zeek][action]" => "[zeek_mysql][cmd]" } } }
+
+  if ([zeek_ntlm][success]) {
+    # this log entry implicitly means a login attempt
+    mutate { id => "mutate_add_field_zeek_ntlm_action"
+             add_field => { "[@metadata][zeek_ntlm_action]" => "Authenticate" } }
+    mutate { id => "mutate_merge_zeek_ntlm_action"
+             merge => { "[zeek][action]" => "[@metadata][zeek_ntlm_action]" } }
+  }
 
   if ([zeek_ntp][mode_str])                     { mutate { id => "mutate_merge_normalize_zeek_ntp_mode_str"
                                                            merge => { "[zeek][action]" => "[zeek_ntp][mode_str]" } } }
@@ -196,6 +211,9 @@ filter {
         event.set('[zeek][action]', actions)"
     }
   }
+
+  if ([zeek_sip][method]) { mutate { id => "mutate_merge_normalize_zeek_sip_method"
+                                     merge => { "[zeek][action]" => "[zeek_sip][method]" } } }
 
   if ([zeek_smtp]) {
     # action depends on varios smtp headers' presence
@@ -337,8 +355,11 @@ filter {
   if ([zeek_bacnet]) {
     if ([zeek_bacnet][data_dict][result] =~ / NAK$/) {
       # clean failure from NAK in data_dict.result
-      mutate { id => "mutate_add_field_zeek_bacnet_nak_result"
+      mutate { id => "mutate_add_field_zeek_bacnet_nak_result_failure"
                add_field => { "[@metadata][zeek_bacnet_result]" => "Failure" } }
+    } else if ([zeek_bacnet][data_dict][result] =~ /^Success/) {
+      mutate { id => "mutate_add_field_zeek_bacnet_nak_result_success"
+               add_field => { "[@metadata][zeek_bacnet_result]" => "Success" } }
     } else if ([zeek_bacnet][apdu_type]) and ([zeek_bacnet][apdu_type] !~ /^apdu_type/) {
       # use apdu_type as result (acknowledge, abort, request, etc.)
       mutate { id => "mutate_add_field_zeek_bacnet_apdu_result"
@@ -359,10 +380,10 @@ filter {
                                                  merge => { "[zeek][result]" => "[zeek_dhcp][server_message]" } } }
     if ([zeek_dhcp][client_message])  { mutate { id => "mutate_merge_normalize_zeek_dhcp_client_message"
                                                  merge => { "[zeek][result]" => "[zeek_dhcp][client_message]" } } }
-    if ([zeek_dhcp][msg_types] == "ACK") {
+    if ("ACK" in [zeek_dhcp][msg_types]) {
       mutate { id => "mutate_add_field_zeek_dhcp_ack_result"
                add_field => { "[@metadata][zeek_dhcp_result]" => "Success" } }
-    } else if ([zeek_dhcp][msg_types] == "NAK") {
+    } else if ("NAK" in [zeek_dhcp][msg_types]) {
       mutate { id => "mutate_add_field_zeek_dhcp_nak_result"
                add_field => { "[@metadata][zeek_dhcp_result]" => "Failure" } }
     }
@@ -372,8 +393,17 @@ filter {
     }
   }
 
-  if ([zeek_dnp3][fc_reply]) { mutate { id => "mutate_merge_normalize_zeek_dnp3_fc_reply"
-                                        merge => { "[zeek][result]" => "[zeek_dnp3][fc_reply]" } } }
+  if ([zeek_dnp3]) {
+    ruby {
+      # action = fc_reply:iin_flags
+      id => "ruby_zeek_s7comm_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[zeek][action]'))
+        actions.append([event.get('[zeek_dnp3][fc_reply]'),
+                        event.get('[zeek_dnp3][iin_flags]').join(',')].compact.join(':'))
+        event.set('[zeek][action]', actions)"
+    }
+  }
 
   if ([zeek_dns]) {
     # DNS result is populated by rcode_name (with NOERROR being translated to Success), and rejected
@@ -535,25 +565,36 @@ filter {
     } else if ([zeek_radius][result] =~ /^(?i)fail/) {
       mutate { id => "mutate_add_field_zeek_radius_failure"
                add_field => { "[@metadata][zeek_radius_result]" => "Failure" } }
+    } else {
+      mutate { id => "mutate_add_field_zeek_radius_failure"
+               add_field => { "[@metadata][zeek_radius_result]" => "%{[zeek_radius][result]}" } }
     }
-    if ([@metadata][zeek_radius_result]) {
-      mutate { id => "mutate_merge_zeek_radius_result"
-               merge => { "[zeek][result]" => "[@metadata][zeek_radius_result]" } }
-      # if authentication was attempted, also assign an "authenticate" action
-      mutate { id => "mutate_add_field_zeek_radius_auth_action"
-               add_field => { "[@metadata][zeek_radius_auth_action]" => "Authenticate" } }
-      mutate { id => "mutate_merge_zeek_radius_auth_action"
-               merge => { "[zeek][action]" => "[@metadata][zeek_radius_auth_action]" } }
-    }
+    mutate { id => "mutate_merge_zeek_radius_result"
+             merge => { "[zeek][result]" => "[@metadata][zeek_radius_result]" } }
+    # if authentication was attempted, also assign an "authenticate" action
+    mutate { id => "mutate_add_field_zeek_radius_auth_action"
+             add_field => { "[@metadata][zeek_radius_auth_action]" => "Authenticate" } }
+    mutate { id => "mutate_merge_zeek_radius_auth_action"
+             merge => { "[zeek][action]" => "[@metadata][zeek_radius_auth_action]" } }
   }
 
   if ([zeek_rdp][result]) { mutate { id => "mutate_merge_normalize_zeek_rdp_result"
                                             merge => { "[zeek][result]" => "[zeek_rdp][result]" } } }
 
-  # TODO: i should map this somehow if I can find enough data to figure out what the codes are
-  # or look in wireshark
-  if ([zeek_s7comm][parameters][code]) { mutate { id => "mutate_merge_normalize_zeek_s7comm_param_code"
-                                                  merge => { "[zeek][result]" => "[zeek_s7comm][parameters][code]" } } }
+  if ([zeek_s7comm][parameters][code]) {
+    # reference: https://github.com/wireshark/wireshark/blob/master/epan/dissectors/packet-s7comm.c
+    translate {
+      id => "translate_zeek_s7comm_parameters_code"
+      field => "[zeek_s7comm][parameters][code]"
+      destination => "[@metadata][zeek_s7comm_mapped_result]"
+      dictionary_path => "/etc/s7comm_result_codes.yaml"
+      fallback => "%{[zeek_s7comm][status_msg]}"
+    }
+    if ([@metadata][zeek_s7comm_mapped_result]) {
+      mutate { id => "mutate_merge_zeek_s7comm_mapped_result"
+               merge => { "[zeek][result]" => "[@metadata][zeek_s7comm_mapped_result]" } }
+    }
+  }
 
   if ([zeek_sip][status_code]) {
     # normalized version of sip reply code (status_msg may be unpredictable)
@@ -589,13 +630,13 @@ filter {
   }
 
   if ([zeek_smtp][last_reply_code]) {
-    # normalized version of smtp reply code (last_reply_msg may be unpredictable)
+    # normalized version of smtp reply code (last_reply may be unpredictable)
     translate {
       id => "translate_zeek_smtp_last_reply_code"
       field => "[zeek_smtp][last_reply_code]"
       destination => "[@metadata][zeek_smtp_mapped_result]"
       dictionary_path => "/etc/smtp_result_codes.yaml"
-      fallback => "%{[zeek_smtp][last_reply_msg]}"
+      fallback => "%{[zeek_smtp][last_reply_code]}"
     }
     if ([@metadata][zeek_smtp_mapped_result]) {
       mutate { id => "mutate_merge_zeek_smtp_mapped_result"
@@ -652,7 +693,7 @@ filter {
       mutate { id => "mutate_merge_field_zeek_ssl_result_last_alert"
                merge => { "[zeek][result]" => "[zeek_ssl][last_alert]" } }
     }
-    if ([zeek_ssl][validation_status]) {
+    if ([zeek_ssl][validation_status]) and ([zeek_ssl][validation_status] != 'ok') {
       mutate { id => "mutate_merge_field_zeek_ssl_result_validation_status"
                merge => { "[zeek][result]" => "[zeek_ssl][validation_status]" } }
     }
