fix connection state map

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2664,6 +2664,7 @@ filter {
     # conn.log specific logic
 
     translate {
+      id => "translate_zeek_conn_state"
       field => "[zeek_conn][conn_state]"
       destination => "[zeek_conn][conn_state_description]"
       dictionary_path => "/etc/conn_states.yaml"
