updated various dashboards to include result

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -106,11 +106,12 @@ filter {
     } else if ([zeek_dns][qtype_name]) {
       mutate { id => "mutate_add_field_metadata_dns_type"
                add_field => { "[@metadata][dns_action]" => "%{[zeek_dns][qtype_name]}" } }
+    } else {
+      mutate { id => "mutate_add_field_metadata_dns_query"
+               add_field => { "[@metadata][dns_action]" => "Query" } }
     }
-    if ([@metadata][dns_action]) {
-      mutate { id => "mutate_merge_zeek_dns_action"
-               merge => { "[zeek][action]" => "[@metadata][dns_action]" } }
-    }
+    mutate { id => "mutate_merge_zeek_dns_action"
+             merge => { "[zeek][action]" => "[@metadata][dns_action]" } }
   }
 
   if ([zeek_enip][command])                     { mutate { id => "mutate_merge_normalize_zeek_enip_command"
