fix freq lookups by url encoding query parameters

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -1,6 +1,6 @@
 filter {
 
-  # todo: make added fields not zeek-specific?
+  # todo: make added fields not zeek-specific? (see ECS topic branch)
 
   ######## MAC address OUI (manufacturer) lookup #################################################
 
@@ -225,16 +225,12 @@ filter {
 
   if ([dns][host]) {
     # if requested, look up DNS queries using freq_server.py to get entropy scores
-    # I would do this in an http filter (like zeek_ssl.server_name)
-
-    # TODO: getting occasional error ruby_exception, e.g...
-    # ruby_dns_freq_lookup: bad URI(is not URI?): http://freq:10004/measure/samsung c1810 series (sec30cda7c66937)._printer._tcp.local
-    # maybe need to URLencode?
 
     ruby {
         id => "ruby_dns_freq_lookup"
         init => "
           require 'net/http'
+          require 'cgi'
           $freqLookupEnabled = ENV['FREQ_LOOKUP'] || 'false'
           "
         # freq_server.py returns a string like: (2.9333, 3.6353)
@@ -247,7 +243,7 @@ filter {
                 event.get('[dns][host]').each { |query|
                   if (query.length >= 4) and (query !~ /(ip6\.int|ip6\.arpa|in-addr\.arpa|b32\.i2p)$/i) then
                     scoresTmp.clear
-                    scoresTmp.concat(Net::HTTP.get_response(URI.parse('http://freq:10004/measure/' + query)).body.gsub(/(^\(|\)$|\s+)/, '').split(',').map(&:to_f))
+                    scoresTmp.concat(Net::HTTP.get_response(URI.parse('http://freq:10004/measure/' + CGI.escape(query))).body.gsub(/(^\(|\)$|\s+)/, '').split(',').map(&:to_f))
                     if (scoresTmp.length == 2) then
                       scoresv1 << scoresTmp[0]
                       scoresv2 << scoresTmp[1]
