fix DNP3 IIN flags and ftp dashboard

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -434,11 +434,16 @@ filter {
       field => "[zeek_ftp][reply_code]"
       destination => "[@metadata][zeek_ftp_mapped_result]"
       dictionary_path => "/etc/ftp_result_codes.yaml"
-      fallback => "%{[zeek_ftp][reply_msg]}"
     }
     if ([@metadata][zeek_ftp_mapped_result]) {
       mutate { id => "mutate_merge_zeek_ftp_mapped_result"
                merge => { "[zeek][result]" => "[@metadata][zeek_ftp_mapped_result]" } }
+    } else if ([zeek_ftp][reply_msg]) {
+      mutate { id => "mutate_merge_zeek_ftp_reply_msg_result"
+               merge => { "[zeek][result]" => "[zeek_ftp][reply_msg]" } }
+    } else {
+      mutate { id => "mutate_merge_zeek_ftp_reply_code_result"
+               merge => { "[zeek][result]" => "[zeek_ftp][reply_code]" } }
     }
   }
 
@@ -449,11 +454,16 @@ filter {
       field => "[zeek_http][status_code]"
       destination => "[@metadata][zeek_http_mapped_result]"
       dictionary_path => "/etc/http_result_codes.yaml"
-      fallback => "%{[zeek_http][status_msg]}"
     }
     if ([@metadata][zeek_http_mapped_result]) {
       mutate { id => "mutate_merge_zeek_http_mapped_result"
                merge => { "[zeek][result]" => "[@metadata][zeek_http_mapped_result]" } }
+    } else if ([zeek_http][status_msg]) {
+      mutate { id => "mutate_merge_zeek_http_status_msg_result"
+               merge => { "[zeek][result]" => "[zeek_http][status_msg]" } }
+    } else {
+      mutate { id => "mutate_merge_zeek_http_status_code_result"
+               merge => { "[zeek][result]" => "[zeek_http][status_code]" } }
     }
   }
 
@@ -480,6 +490,7 @@ filter {
       field => "[zeek_ldap][result_code]"
       destination => "[@metadata][zeek_ldap_mapped_result]"
       dictionary_path => "/etc/ldap_result_codes.yaml"
+      fallback => "%{[zeek_ldap][result_code]}"
     }
     if ([@metadata][zeek_ldap_mapped_result]) {
       mutate { id => "mutate_merge_zeek_ldap_mapped_result"
@@ -589,7 +600,7 @@ filter {
       field => "[zeek_s7comm][parameters][code]"
       destination => "[@metadata][zeek_s7comm_mapped_result]"
       dictionary_path => "/etc/s7comm_result_codes.yaml"
-      fallback => "%{[zeek_s7comm][status_msg]}"
+      fallback => "%{[zeek_s7comm][parameters][code]}"
     }
     if ([@metadata][zeek_s7comm_mapped_result]) {
       mutate { id => "mutate_merge_zeek_s7comm_mapped_result"
@@ -604,11 +615,16 @@ filter {
       field => "[zeek_sip][status_code]"
       destination => "[@metadata][zeek_sip_mapped_result]"
       dictionary_path => "/etc/sip_result_codes.yaml"
-      fallback => "%{[zeek_sip][status_msg]}"
     }
     if ([@metadata][zeek_sip_mapped_result]) {
       mutate { id => "mutate_merge_zeek_sip_mapped_result"
                merge => { "[zeek][result]" => "[@metadata][zeek_sip_mapped_result]" } }
+    } else if ([zeek_sip][status_msg]) {
+      mutate { id => "mutate_merge_zeek_sip_status_msg_result"
+               merge => { "[zeek][result]" => "[zeek_sip][status_msg]" } }
+    } else {
+      mutate { id => "mutate_merge_zeek_sip_status_code_result"
+               merge => { "[zeek][result]" => "[zeek_sip][status_code]" } }
     }
   }
 
@@ -616,13 +632,14 @@ filter {
     # zeek_smb_cmd.status (SUCCESS, NO_SUCH_FILE, ACCESS_DENIED, OBJECT_NAME_COLLISION, etc.)
     translate {
       id => "translate_zeek_smb_cmd_status"
-      field => "[zeek_smb_cmd][status_code]"
+      field => "[zeek_smb_cmd][status]"
       destination => "[@metadata][zeek_smb_cmd_mapped_result]"
       dictionary => {
         "SUCCESS" => "Success"
-        # TODO... normalize other codes? or maybe just case-normalize and remove underscores?
+        # TODO... normalize other codes? or maybe just case-normalize and remove underscores/dashes?
+        # e.g., "ACCESS_DENIED".split(/[_-]/).collect(&:capitalize).join(' ')
       }
-      fallback => "%{[zeek_smb_cmd][status_code]}"
+      fallback => "%{[zeek_smb_cmd][status]}"
     }
     if ([@metadata][zeek_smb_cmd_mapped_result]) {
       mutate { id => "mutate_merge_zeek_smb_cmd_mapped_result"
@@ -630,18 +647,22 @@ filter {
     }
   }
 
-  if ([zeek_smtp][last_reply_code]) {
-    # normalized version of smtp reply code (last_reply may be unpredictable)
-    translate {
-      id => "translate_zeek_smtp_last_reply_code"
-      field => "[zeek_smtp][last_reply_code]"
-      destination => "[@metadata][zeek_smtp_mapped_result]"
-      dictionary_path => "/etc/smtp_result_codes.yaml"
-      fallback => "%{[zeek_smtp][last_reply_code]}"
+  if ([zeek_smtp]) {
+    if ([zeek_smtp][last_reply_code]) {
+      # normalized version of smtp reply code (last_reply may be unpredictable)
+      translate {
+        id => "translate_zeek_smtp_last_reply_code"
+        field => "[zeek_smtp][last_reply_code]"
+        destination => "[@metadata][zeek_smtp_mapped_result]"
+        dictionary_path => "/etc/smtp_result_codes.yaml"
+      }
     }
     if ([@metadata][zeek_smtp_mapped_result]) {
       mutate { id => "mutate_merge_zeek_smtp_mapped_result"
                merge => { "[zeek][result]" => "[@metadata][zeek_smtp_mapped_result]" } }
+    } else if ([zeek_smtp][last_reply]) {
+      mutate { id => "mutate_merge_zeek_smtp_last_reply_result"
+               merge => { "[zeek][result]" => "[zeek_smtp][last_reply]" } }
     }
   }
 
@@ -654,11 +675,13 @@ filter {
         "succeeded" => "Success"
         # TODO... normalize other codes (figure out what they are)
       }
-      fallback => "%{[zeek_socks][server_status]}"
     }
     if ([@metadata][zeek_socks_mapped_result]) {
       mutate { id => "mutate_merge_zeek_socks_mapped_result"
                merge => { "[zeek][result]" => "[@metadata][zeek_socks_mapped_result]" } }
+    } else if ([zeek_socks][server_status]) {
+      mutate { id => "mutate_merge_zeek_socks_server_status_result"
+               merge => { "[zeek][result]" => "[zeek_socks][server_status]" } }
     }
   }
 
@@ -772,8 +795,8 @@ filter {
   if ([zeek_notice][file_mime_type])            { mutate { id => "mutate_merge_normalize_zeek_notice_file_mime_type"
                                                            merge => { "[zeek][filetype]" => "[zeek_notice][file_mime_type]" } } }
 
-  if ([zeek_smtp][content_type])                 { mutate { id => "mutate_merge_normalize_zeek_smtp_content_type"
-                                                           merge => { "[zeek][filetype]" => "[zeek_smtp][content_type]" } } }
+  if ([zeek_sip][content_type])                 { mutate { id => "mutate_merge_normalize_zeek_sip_content_type"
+                                                           merge => { "[zeek][filetype]" => "[zeek_sip][content_type]" } } }
 
   if ([zeek][filetype]) {
     ruby {
