fix issue applying iin_flags to action if they weren't specified

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -401,7 +401,7 @@ filter {
       code => "
         actions = Array.new unless (actions = event.get('[zeek][action]'))
         actions.append([event.get('[zeek_dnp3][fc_reply]'),
-                        event.get('[zeek_dnp3][iin_flags]').join(',')].compact.join(':'))
+                        Array(event.get('[zeek_dnp3][iin_flags]')).join(',')].compact.join(':'))
         event.set('[zeek][action]', actions)"
     }
   }
